--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,17 @@
+
 name: Myfirstworkflow
-on: workflow_dispatch
+
+on: 
+  workflow_dispatch:
+
 jobs:
- job1:
- runs-on:  ubuntu-latest
- steps:
-  - name: Print greetings!
+  job1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print greetings!
         run: echo "Hello All"
-  - name: Run multiple commands 
-         run: |
+
+      - name: Run multiple commands 
+        run: |
           echo "Hello Github"
           echo "This is job1"
